<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Users.LoginActivity" tools:layout_editor_absoluteY="25dp">


    <android.support.v7.widget.Toolbar
            android:id="@+id/loginToolbar"
            android:layout_width="384dp"
            android:layout_height="70dp"
            android:background="#1395ff"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"

            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/loginError_txt" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginBottom="65dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/idpos"
                android:textSize="34sp"
                android:textStyle="bold"
                android:id="@+id/app_title" tools:layout_editor_absoluteY="12dp" tools:layout_editor_absoluteX="16dp"
                android:textColor="@android:color/background_light" android:textAlignment="center"
                android:layout_gravity="center_horizontal"/>

    </android.support.v7.widget.Toolbar>


    <TextView
            android:text="Email or Password is wrong!"
            android:layout_width="218dp"
            android:layout_height="wrap_content"
            android:id="@+id/loginError_txt"
            android:textAlignment="viewStart"
            android:visibility="invisible"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@android:color/holo_red_dark"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" app:layout_constraintTop_toBottomOf="@+id/loginToolbar"
            android:layout_marginBottom="33dp" app:layout_constraintBottom_toTopOf="@+id/userLogin_email"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            tools:ignore="AutoFill"
            android:id="@+id/userLogin_email"
            android:hint="@string/email_hint_txt"
            android:background="@drawable/edittext_border"
            android:paddingStart="15dp"
            android:paddingEnd="10dp"
            app:layout_constraintTop_toBottomOf="@+id/loginError_txt" android:layout_marginBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/userLogin_password"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" android:layout_marginEnd="32dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:background="@drawable/edittext_border"
            android:ems="10"
            tools:ignore="AutoFill"
            android:id="@+id/userLogin_password"
            android:hint="@string/password_hint_txt"
            android:paddingStart="15dp"
            android:paddingEnd="10dp"
            android:inputType="textPersonName|textPassword"
            app:layout_constraintTop_toBottomOf="@+id/userLogin_email"
            android:layout_marginBottom="22dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/login_Btn" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" android:layout_marginEnd="32dp"
    />

    <Button
            android:id="@+id/login_Btn"
            android:text="@string/sign_in_btn_txt"
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:background="@drawable/backgrounddesign"
            android:textSize="20sp" android:textColor="@android:color/background_light"
            android:textStyle="bold"
            android:textAllCaps="false"
            app:layout_constraintTop_toBottomOf="@+id/userLogin_password" android:layout_marginBottom="37dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/signup_Btn"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" android:layout_marginEnd="32dp"/>

    <Button
            android:id="@+id/signup_Btn"
            android:text="@string/create_account_txt"
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:background="@drawable/backgrounddesign"
            android:textSize="20sp"
            android:textColor="@android:color/background_light"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:onClick="signUpActivity"
            app:layout_constraintTop_toBottomOf="@+id/login_Btn" android:layout_marginBottom="131dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="32dp" android:layout_marginEnd="32dp"/>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="77dp"
            android:layout_height="wrap_content"
            android:id="@+id/login_progressBar"
            app:layout_constraintTop_toBottomOf="@+id/loginToolbar" android:layout_marginBottom="261dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:visibility="invisible"
            android:layout_marginTop="4dp"/>

</android.support.constraint.ConstraintLayout>