<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Users.LoginActivity" tools:layout_editor_absoluteY="25dp">

    <android.support.v7.widget.Toolbar
            android:id="@+id/loginToolbar"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:background="#1395ff"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            android:layout_marginBottom="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/scrollView2" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Users"
                android:textSize="30sp"
                android:textStyle="bold"
                android:id="@+id/app_title"
                tools:layout_editor_absoluteY="12dp"
                tools:layout_editor_absoluteX="16dp"
                android:textColor="@android:color/background_light"
                android:textAlignment="center"
                android:layout_gravity="center"/>

    </android.support.v7.widget.Toolbar>


    <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/scrollView2"
            app:layout_constraintTop_toBottomOf="@+id/loginToolbar" app:layout_constraintEnd_toEndOf="parent"
            android:scrollbars="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">
        <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                                                     android:layout_height="match_parent"
                                                     app:layout_constraintBottom_toBottomOf="@+id/store_password"
                                                     app:layout_constraintTop_toBottomOf="@+id/store_password">
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="46dp"
                    android:inputType="textPersonName"
                    android:ems="10"
                    tools:ignore="AutoFill"
                    android:id="@+id/username"
                    android:hint="@string/username_hint_txt"
                    android:background="@drawable/edittext_border"
                    android:paddingStart="15dp"
                    android:paddingEnd="10dp"
                    android:layout_marginTop="16dp" android:layout_marginBottom="12dp"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/person_name"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="21dp" android:layout_marginEnd="21dp"
                    app:layout_constraintVertical_chainStyle="spread_inside"/>


            <EditText
                    android:layout_width="0dp"
                    android:layout_height="46dp"
                    android:inputType="textEmailAddress|textPersonName"
                    android:ems="10"
                    tools:ignore="AutoFill"
                    android:id="@+id/person_name"
                    android:hint="Your Name"
                    android:background="@drawable/edittext_border"
                    android:paddingStart="15dp"
                    android:paddingEnd="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/username"
                    android:layout_marginBottom="12dp" app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/useremail" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="21dp" android:layout_marginEnd="21dp"
            />
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="46dp"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    tools:ignore="AutoFill"
                    android:id="@+id/useremail"
                    android:hint="@string/email_hint_txt"
                    android:background="@drawable/edittext_border"
                    android:paddingStart="15dp"
                    android:paddingEnd="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/person_name" android:layout_marginBottom="12dp"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/store_password"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="21dp" android:layout_marginEnd="21dp"
            />

            <EditText
                    android:layout_width="0dp"
                    android:layout_height="46dp"
                    android:inputType="textPassword"
                    android:background="@drawable/edittext_border"
                    android:ems="10"
                    tools:ignore="AutoFill"
                    android:id="@+id/store_password"
                    android:hint="@string/password_hint_txt"
                    android:paddingStart="15dp"
                    android:paddingEnd="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/useremail" android:layout_marginBottom="12dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/confirm_password"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="21dp" android:layout_marginEnd="21dp"
            />
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="46dp"
                    android:inputType="textPassword"
                    android:background="@drawable/edittext_border"
                    android:ems="10"
                    tools:ignore="AutoFill"
                    android:id="@+id/confirm_password"
                    android:hint="Confirm Password"
                    android:paddingStart="15dp"
                    android:paddingEnd="10dp"
                    android:layout_marginBottom="12dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/selectUser_txtView"
                    app:layout_constraintTop_toBottomOf="@+id/store_password"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="21dp" android:layout_marginEnd="21dp"
            />


            <TextView
                    android:text="Select User Type:"
                    android:layout_width="0dp"
                    android:layout_height="24dp"
                    android:id="@+id/selectUser_txtView" android:textSize="18sp"
                    app:layout_constraintTop_toBottomOf="@+id/confirm_password" android:layout_marginBottom="10dp"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/TypeRadioBtn"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="21dp" android:layout_marginEnd="21dp"
            />
            <RadioGroup
                    android:layout_width="0dp"
                    android:layout_height="46dp"
                    android:id="@+id/TypeRadioBtn" android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@+id/selectUser_txtView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/createUser_Btn"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="21dp" android:layout_marginEnd="21dp">
                <RadioButton
                        android:text="Retailer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/retailer_radioBtn"
                        android:layout_weight="1"
                        android:checked="true"/>
                <RadioButton
                        android:text="Customer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/customer_radioBtn"
                        android:layout_weight="1"/>
                <RadioButton
                        android:text="Distributor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/distributor_radioBtn"
                        android:layout_weight="1" android:visibility="gone"/>
                <RadioButton
                        android:text="SalesMan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/salesMan_RadioBtn"
                        android:layout_weight="1" android:visibility="gone"/>
            </RadioGroup>
            <Button
                    android:text="Add User"
                    android:layout_width="320dp"
                    android:layout_height="46dp"
                    android:id="@+id/createUser_Btn"
                    android:background="@drawable/backgrounddesign"
                    android:textSize="20sp" android:textColor="@android:color/background_light"
                    android:textStyle="bold"
                    android:textAllCaps="false"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/TypeRadioBtn"
                    android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>


        </android.support.constraint.ConstraintLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>